# gflabel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COLOR_NOTES.md  LICENSE.txt  README.md  SCALE_AND_OFFSET_NOTES.md  generate.py  pyproject.toml
.github/workflows/: python-publish.yml
images/: generate.py
src/genlabel/: cli.py  fragments.py  label.py  options.py
src/genlabel/bases/: pred.py  webb.py
src/gflabel/: cli.py  fragments.py  label.py  options.py  util.py
src/gflabel/bases/: __init__.py  cullenect.py  modern.py  none.py  plain.py  pred.py  tailor.py  webb.py
src/gflabel/resources/: LICENSE_symbols
util/: generate_example_images.py
