[tool.poetry]
name = "genlabel"
version = "0.1.0"
description = ""
authors = ["Nicholas Devenish <ndevenish@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
build123d = "^0.5.0"

[tool.poetry.scripts]
genlabel = "genlabel.cli:run"

[tool.jane]
profiles = ["default"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
