[tool.poetry]
name = "gflabel"
version = "0.1.1"
description = ""
authors = ["Nicholas Devenish <ndevenish@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
build123d = "^0.5.0"
rich = "^13.7.1"

[tool.poetry.scripts]
gflabel = "gflabel.cli:run"

[tool.jane]
profiles = ["default"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "0.1.1"
tag = true
tag_name = "v{new_version}"
commit = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
