[project]
name = "gflabel"
version = "0.2.0"
description = ""
authors = [{name = "Nicholas Devenish", email = "ndevenish@gmail.com"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "build123d>=0.8.0",
    "rich>=13.7.1",
    "pint>=0.24.4",
]

[project.scripts]
gflabel = "gflabel.cli:run"

[tool.jane]
profiles = ["default"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.2.0"
tag = true
tag_name = "v{new_version}"
commit = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
